objects/RPFCalculation__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount of the stored calculated value</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>The month and year that this stored calculated value applies to</description>
        <label>Month</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemId__c</fullName>
        <description>The Id of the OpportunityLineItem this calculation is related to</description>
        <label>OpportunityLineItemId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RPF Calculations</relationshipLabel>
        <relationshipName>RPF_Calculations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RPF Calculation</label>
    <nameField>
        <label>RPFCalculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RPF Calculations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>